bk_ida/gccida/c0/life_analysis
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/life_analysis/src/flow.c:880:24: error: use of undeclared identifier 'life_analysis_eliminables'
elim_reg_set |= 1LL << life_analysis_eliminables[i].from; 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/life_analysis/src/obj/flow.o] Error 1
